# Whisperall

./: .agent-config.json  .agent-locks.json  .agent-mail.json  .gitignore  AGENTS.md  BuildInstaller.bat  CHANGELOG.md  CLAUDE.md  Chatterbox-Espanol.bat  Chatterbox-Turbo.bat  Chatterbox.bat  ChatterboxUI.bat  DevWeb.bat  README.md  THIRD_PARTY_NOTICES.md  Whisperall.bat  build.bat  design.pen  example_for_mac.py  example_tts.py  example_tts_turbo.py  example_vc.py  gradio_tts_app.py  gradio_tts_turbo_app.py  gradio_vc_app.py  multilingual_app.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  turbo.json
docs/: AI_CONTEXT_PACK.md  CLOUD_BACKEND_MVP.md  COMPETITOR_FEATURE_MATRIX.md  FEATURE_INVENTORY.md  GUIA_MODELOS_IA_APIS.md  METRICS_AND_USAGE_BASELINE.md  MODULES_QA.md  PAIN_POINTS.md  PRICING_AND_PLANS_DRAFT.md  PRODUCT_AND_UI_DIRECTION.md  TECHNICAL_CONSTRAINTS.md  UI_AUDIT_AND_REFACTOR_PLAN.md  design-system.md  whisperall_product_strategy.md
electron/: loading.html  main.js  overlay.html  package-lock.json  package.json  preload.js  subtitle-overlay.html  widget-overlay.html
plans/: AUDITORIA_SELECTORES_MODELOS.md  AUDIT_VERITAS_2026-01-25.md  MASTER_PLAN.md  WIDGET_EXPANSION_PLAN.md  commercialization_checklist.md  errores_a_resolver.md  errores_a_resolver_2.md  errores_a_resolver_3.md  errores_a_resolver_4.md  errores_a_resolver_5.md  errores_a_resolver_6.md  errores_a_resolver_7.md  errores_a_resolver_8.md  installer_plan.md  transcription-plan.md  transitive_dependency_report.md
scripts/: history_usage_report.py  install_cpu.ps1  (+1 more)
(+619 files in other folders)
