[project]
name = "whisperall-tts"
version = "0.1.6"
description = "Whisperall: local speech suite (TTS, STT, voice conversion)"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Whisperall"}
]
dependencies = [
    "numpy>=2.2.2,<3.0.0",
    "librosa==0.11.0",
    "s3tokenizer",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "transformers==4.46.3",
    "diffusers==0.29.0",
    "resemble-perth==1.0.1",
    "conformer==0.3.2",
    "safetensors==0.5.3",
    "spacy-pkuseg",
    "gradio==5.44.1",
    "pyloudnorm",
    "omegaconf"
]

[project.urls]
Homepage = "https://github.com/Karasowl/whisperall"
Repository = "https://github.com/Karasowl/whisperall"

[project.optional-dependencies]
ui = [
    "pyannote-audio==4.0.3",
    "faster-whisper==1.2.1",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
]
whisperx = [
    "whisperx==3.7.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
